--- a/Latte1/Album.storyboard
+++ b/Latte1/Album.storyboard
@@ -25,9 +25,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="byp-EA-xtU">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="byp-EA-xtU">
                                 <rect key="frame" x="50" y="132" width="314" height="651"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="85v-s0-NxJ">
                                     <size key="itemSize" width="127" height="127"/>
@@ -44,14 +43,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yrw-Bg-yhL">
-                                                    <rect key="frame" x="0.0" y="106" width="127" height="21"/>
+                                                    <rect key="frame" x="0.0" y="53" width="127" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2bg-LM-gyu">
-                                                    <rect key="frame" x="0.0" y="-1" width="127" height="108"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="127" height="128"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -111,6 +110,11 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="byp-EA-xtU" firstAttribute="top" secondItem="hu8-RR-aLW" secondAttribute="top" constant="20" id="2UO-vw-amt"/>
+                            <constraint firstItem="byp-EA-xtU" firstAttribute="leading" secondItem="hu8-RR-aLW" secondAttribute="leading" constant="50" id="9jn-ED-ayc"/>
+                            <constraint firstItem="hu8-RR-aLW" firstAttribute="trailing" secondItem="byp-EA-xtU" secondAttribute="trailing" constant="50" id="dTl-x5-pPB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hu8-RR-aLW"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="Vtr-YM-nLr" userLabel="Album"/>
@@ -138,9 +142,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oYO-51-ZCP">
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oYO-51-ZCP">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="Y2I-BF-jIi">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="Ean-KI-a50">
@@ -158,9 +161,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="roD-mr-YfT">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="roD-mr-YfT">
                                 <rect key="frame" x="50" y="131" width="314" height="634"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Uuz-Ka-hen">
                                     <size key="itemSize" width="125" height="136"/>
@@ -197,6 +199,11 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gmx-My-SOS" firstAttribute="trailing" secondItem="roD-mr-YfT" secondAttribute="trailing" constant="50" id="BxL-Wk-IOF"/>
+                            <constraint firstItem="roD-mr-YfT" firstAttribute="leading" secondItem="Gmx-My-SOS" secondAttribute="leading" constant="50" id="iFQ-qJ-fvg"/>
+                            <constraint firstItem="roD-mr-YfT" firstAttribute="top" secondItem="oYO-51-ZCP" secondAttribute="bottom" constant="30" id="lTz-9J-ULb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Gmx-My-SOS"/>
                     </view>
                     <connections>
@@ -238,12 +245,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="TCell" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHY-vc-QZf">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" restorationIdentifier="TCell" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KHY-vc-QZf">
                                 <rect key="frame" x="0.0" y="135" width="414" height="422"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KHY-vc-QZf" firstAttribute="top" secondItem="eYq-tA-5tK" secondAttribute="top" constant="100" id="tbz-1Z-3jU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="eYq-tA-5tK"/>
                     </view>
                     <toolbarItems/>
